# pptx-mcp-live

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pptx_mcp_live/: __init__.py  __main__.py  server.py
src/pptx_mcp_live/core/: __init__.py  connection.py  errors.py
src/pptx_mcp_live/tools/: __init__.py  advanced.py  comments.py  export.py  formatters.py  inspection.py  layout.py  media.py  readers.py  writers.py
