[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-mcp-live"
version = "0.1.0"
description = "MCP server for Microsoft PowerPoint with COM automation - 35 tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jinqi Shen", email = "jinqishen@microsoft.com"},
]
dependencies = [
    "pywin32",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
